removed extra files

--- a/index.html
+++ b/index.html
@@ -356,9 +356,8 @@
             </li>
             <li class="col-1-12">&nbsp;</li>
             <li class="col-5-12 bottom">
-                <img src="assets/img/developer.jpg" class="wide" alt="Image"/>
+                <img src="assets/img/astrounaut.png"  data-action="zoom" class="shadow rounded ae-8"  alt="Image"/>
               
-              <img src="assets/img/designer.jpg" data-action="zoom" class="shadow rounded ae-8" alt="Image"/>
             </li>
           </ul>
         </div>
